fixing metadata and preview nav button conditional visibility, closes #549, closes #548

--- a/style.css
+++ b/style.css
@@ -654,6 +654,9 @@ ins {
 .file .meta      { display:none; }
 .file.meta .meta { display:block; }
 
+.file .preview      { display:none; }
+.file.preview .preview { display:block; }
+
 .file .settings          { display:none; }
 .file.settings .settings { display:block; }
 
